# probabilistic-bayesian-deep-learning

./: README.md  pyproject.toml
configs/: calibration_benchmark.yaml  conformal_benchmark.yaml  default.yaml  uncertainty_benchmark.yaml
notebooks/: 01_synthetic_dgp_walkthrough.ipynb  02_uncertainty_estimation.ipynb  03_calibration.ipynb  04_conformal_prediction.ipynb
scripts/: run_benchmark.py
src/prob_ml/: __init__.py
src/prob_ml/calibration/: __init__.py  dirichlet.py  metrics.py  temperature.py
src/prob_ml/conformal/: __init__.py  metrics.py  split.py
src/prob_ml/data/: __init__.py  base.py  classification_dgp.py  regression_dgp.py
src/prob_ml/evaluation/: __init__.py  report.py  runner.py
src/prob_ml/models/: __init__.py  mlp.py  trainer.py
src/prob_ml/uncertainty/: __init__.py  conformal_band.py  deep_ensemble.py  deep_ensembles.py  mc_dropout.py  metrics.py
src/prob_ml/utils/: __init__.py
tests/: test_bayesian_mlp.py  test_calibration.py  test_conformal.py  test_dgp.py  test_uncertainty.py
